--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "url": "https://github.com/vertcoin-project/vertcore-p2p.git"
   },
   "dependencies": {
-    "vertcore-lib": "git://github.com/vertcoin-project/vertcore-lib.git",
-    "vcoin": "git://github.com/vertcoin-project/vcoin.git",
+    "vertcore-lib": "git://github.com/cruelnovo/vertcore-lib.git",
+    "vcoin": "git://github.com/cruelnovo/vcoin.git",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
     "socks5-client": "^0.3.6"
